[package]
name = "html"
version = "1.0.0"
edition = "2021"  # Rust版本(2015/2018/2021)

authors = ["gengyoubo"]
repository = "https://github.com/onodera2007/html"
readme = "README.md"
keywords = ["cli", "web"]
[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
futures = "0.3"
